# lgrb-capstone-project

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  memory.x  rust-toolchain.toml  sync.sh
.cargo/: config.toml
ble-listener/: Cargo.toml  README.md
ble-listener/src/: bluetooth.rs  config.rs  event.rs  main.rs
lgrcp-embed/: Cargo.toml  Makefile  README.md  memory.x
lgrcp-embed/.cargo/: config.toml
lgrcp-embed/src/: main.rs
listener/: Cargo.toml  index.html
listener/src/: main.rs
nrf-embed/: Cargo.toml  Embed.toml  README.md  memory.x
nrf-embed/.cargo/: config.toml
nrf-embed/src/: button.rs  channel.rs  executor.rs  future.rs  gpiote.rs  led.rs  main.rs  time.rs
src/: main.rs
web/: package-lock.json  package.json
web-2/: index.html
web-server/: Cargo.toml
web/src/: App.css  App.tsx
ws-server/: Cargo.toml  README.md  index.html
ws-server/src/: config.rs  event.rs  handlers.rs  main.rs  state.rs
