[package]
authors = ["Ken Esparta"]
edition = "2021"
readme = "README.md"
name = "lgrcp-embed"
version = "0.1.0"

[dependencies]
embassy-executor = { version = "0.7", default-features = false, features = [
    "arch-cortex-m",
    "defmt",
    "executor-interrupt",
    "executor-thread",
    "task-arena-size-32768"
] }
embassy-time = { version = "0.4", default-features = false, features = ["defmt", "defmt-timestamp-uptime"] }
embassy-futures = "0.1.1"
embassy-sync = { version = "0.7", features = ["defmt"] }

futures = { version = "0.3", default-features = false, features = ["async-await"]}
trouble-host = { version = "0.2.0", features = ["defmt", "gatt", "peripheral"] }

defmt = "1.0.1"
defmt-rtt = "1"

cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.5"
panic-probe = { version = "1", features = ["print-defmt"] }
static_cell = "2"
microbit-bsp = { version = "0.4.0", features = ["trouble"] }

[patch.crates-io]
microbit-bsp = { git = "https://github.com/lulf/microbit-bsp.git", rev = "19d555bfbbcfa39db6aac467673386662c39e299" }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", rev="7be9b853e15ca0404d65c623d1ec5795fd96c204" }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev="7be9b853e15ca0404d65c623d1ec5795fd96c204" }

embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "f35aa4005a63e8d478b2b95aaa2bfb316b72dece" }

[[bin]]
name = "lgrcp-embed"
test = false
bench = false

[profile.release]
debug = 2
