[package]
authors = ["Ken Esparta"]
edition = "2024"
readme = "README.md"
name = "lgrcp-embed"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
critical-section = "1.1.2"
embassy-executor = { version = "0.6.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
] }
embassy-nrf = { version = "0.2.0", features = [
    "nrf52833",
    "time-driver-rtc1",
    "gpiote",
] }
embassy-sync = "0.6.0"
embassy-time = "0.3.2"
futures = { version = "0.3.30", default-features = false, features = [
    "async-await",
] }
panic-rtt-target = "0.1.3"
rtt-target = "0.5.0"

[[bin]]
name = "lgrcp-embed"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true

[features]
trigger-overflow = []