[package]
authors = ["Ken Esparta"]
edition = "2024"
readme = "README.md"
name = "lgrcp-embed"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"] }
embassy-nrf = { version = "0.7.0", features = ["nrf52833", "gpiote", "time-driver-rtc1"] }
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
panic-rtt-target = "0.2.0"
rtt-target = "0.6.1"

[[bin]]
name = "lgrcp-embed"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true

[features]
trigger-overflow = []
