[package]
authors = ["Ken Esparta"]
edition = "2021"
name = "web-server"
version = "0.1.0"
readme = "README.md"

[dependencies]
leptos = { version = "0.8.8", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "BinaryType",
] }
js-sys = "0.3"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

