[package]
authors = ["Ken Esparta"]
edition = "2021"
name = "ws-server"
version = "0.1.0"
readme = "README.md"

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
tower-http = { version = "0.6.6", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
